Try to fix the background to prevent flickering when scrolling the page.
git-svn-id: svn+ssh://svn.gnucash.org/repo/htdocs/branches/beta@21074 57a11ea4-9604-0410-9ed3-97b8803252fd

--- a/externals/gnucash.css
+++ b/externals/gnucash.css
@@ -1,6 +1,7 @@
 BODY {
    color: black;
    background:url(backg.png) repeat;
+   background-attachment:fixed;
    border: 0px;
    margin: 0px;
    font-size:90%;
